# timelapse-creator

./: .gitignore  QUICKSTART.md  README.md  docker-compose.yml  start.sh
.github/workflows/: release.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  models.rs
backend/src/handlers/: create_timelapse.rs  download.rs  health.rs  job_status.rs  mod.rs  preview.rs  upload.rs
backend/src/storage/: local.rs
backend/src/video/: processor.rs
docs/: architecture.md
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConfirmationModal.tsx  FileUploader.tsx  ImagePreview.tsx  RotationControls.tsx  VideoPlayer.tsx  VideoStatus.tsx
frontend/lib/: api.ts  tauri-api.ts
nginx/: nginx.conf
scripts/: download-ffmpeg.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-icons.sh  icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: cleanup.rs  download.rs  job_status.rs  mod.rs  preview.rs  timelapse.rs  upload.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/video/: mod.rs  processor.rs  rotation.rs
