[package]
name = "timelapse-backend"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
tempfile = "3.8"
futures-util = "0.3"
anyhow = "1.0"
chrono = "0.4"
alphanumeric-sort = "1.5"
sanitize-filename = "0.5"
actix-cors = "0.6"
regex = "1.10"
