[package]
name = "timelapse-creator"
version = "1.0.0"
edition = "2021"

[lib]
name = "timelapse_creator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
anyhow = "1"
alphanumeric-sort = "1.5"
regex = "1"
base64 = "0.22"
